solve some issues